Feat(eos_designs, eos_cli_config_gen): Add BFD option for underlay ISIS (#3683)

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/loopbacks-interfaces.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/intended/configs/loopbacks-interfaces.cfg
@@ -30,6 +30,7 @@ interface Loopback99
    ipv6 enable
    ipv6 address 2002::CAFE/64
    isis enable ISIS_TEST
+   isis bfd
    isis passive
    isis metric 100
    isis network point-to-point
