--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/l3_edge_isis.cfg
@@ -33,6 +33,7 @@ interface ethernet2
    no switchport
    ip address 192.168.0.2/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 60
    no isis hello padding
@@ -47,6 +48,7 @@ interface ethernet3
    no switchport
    ip address 192.168.0.4/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis hello padding
@@ -59,6 +61,7 @@ interface ethernet4
    no switchport
    ip address 192.168.0.6/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis hello padding
