--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-BL1A.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-BL1A.cfg
@@ -52,6 +52,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.41/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -63,6 +64,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.43/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -74,6 +76,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.45/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -85,6 +88,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.47/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -106,6 +110,7 @@ interface Ethernet8
    no switchport
    ip address 100.64.0.0/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis hello padding
@@ -137,6 +142,7 @@ interface Vlan4093
    mtu 1500
    ip address 10.255.251.10/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis metric 50
    isis network point-to-point
 !
