--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-BL1B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-BL1B.cfg
@@ -52,6 +52,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.49/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -63,6 +64,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.51/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -74,6 +76,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.53/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -85,6 +88,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.55/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -125,6 +129,7 @@ interface Vlan4093
    mtu 1500
    ip address 10.255.251.11/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis metric 50
    isis network point-to-point
 !
