--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-LEAF2B.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-LEAF2B.cfg
@@ -60,6 +60,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.17/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -71,6 +72,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.19/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -82,6 +84,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.21/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -93,6 +96,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.23/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -138,6 +142,7 @@ interface Vlan4093
    mtu 1500
    ip address 10.255.251.3/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis metric 50
    isis network point-to-point
 !
