--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SPINE4.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SPINE4.cfg
@@ -34,6 +34,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.6/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -45,6 +46,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.14/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -56,6 +58,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.22/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -67,6 +70,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.30/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -78,6 +82,7 @@ interface Ethernet5
    no switchport
    ip address 172.31.255.38/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -89,6 +94,7 @@ interface Ethernet6
    no switchport
    ip address 172.31.255.46/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -100,6 +106,7 @@ interface Ethernet7
    no switchport
    ip address 172.31.255.54/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
