--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SVC3A.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SVC3A.cfg
@@ -56,6 +56,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.25/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -67,6 +68,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.27/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -78,6 +80,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.29/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -89,6 +92,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.31/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -140,6 +144,7 @@ interface Vlan4094
    no autostate
    ip address 10.255.252.6/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis metric 50
    isis network point-to-point
 !
