--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -3833,6 +3833,12 @@ keys:
       '
     type: bool
     default: false
+  underlay_isis_bfd:
+    documentation_options:
+      table: isis-settings
+    type: bool
+    default: false
+    description: Enable BFD for ISIS on all underlay links.
   underlay_isis_instance_name:
     documentation_options:
       table: isis-settings
