--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SPINE2.cfg
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/configs/DC1-SPINE2.cfg
@@ -34,6 +34,7 @@ interface Ethernet1
    no switchport
    ip address 172.31.255.2/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -45,6 +46,7 @@ interface Ethernet2
    no switchport
    ip address 172.31.255.10/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -56,6 +58,7 @@ interface Ethernet3
    no switchport
    ip address 172.31.255.18/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -67,6 +70,7 @@ interface Ethernet4
    no switchport
    ip address 172.31.255.26/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -78,6 +82,7 @@ interface Ethernet5
    no switchport
    ip address 172.31.255.34/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -89,6 +94,7 @@ interface Ethernet6
    no switchport
    ip address 172.31.255.42/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
@@ -100,6 +106,7 @@ interface Ethernet7
    no switchport
    ip address 172.31.255.50/31
    isis enable EVPN_UNDERLAY
+   isis bfd
    isis circuit-type level-2
    isis metric 50
    isis network point-to-point
