--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SPINE2.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SPINE2.yml
@@ -71,6 +71,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.2/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -84,6 +85,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.10/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -97,6 +99,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.18/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -110,6 +113,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.26/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -123,6 +127,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.34/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -136,6 +141,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.42/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -149,6 +155,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.50/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
