--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SVC3A.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/intended/structured_configs/DC1-SVC3A.yml
@@ -119,6 +119,7 @@ vlan_interfaces:
   mtu: 1500
   ip_address: 10.255.252.6/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
 port_channel_interfaces:
@@ -168,6 +169,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.25/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -181,6 +183,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.27/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -194,6 +197,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.29/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
@@ -207,6 +211,7 @@ ethernet_interfaces:
   type: routed
   ip_address: 172.31.255.31/31
   isis_enable: EVPN_UNDERLAY
+  isis_bfd: true
   isis_metric: 50
   isis_network_point_to_point: true
   isis_circuit_type: level-2
