--- a/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/inventory/group_vars/DC1_FABRIC.yml
+++ b/ansible_collections/arista/avd/molecule/evpn_underlay_isis_overlay_ibgp/inventory/group_vars/DC1_FABRIC.yml
@@ -6,6 +6,7 @@ fabric_name: DC1_FABRIC
 
 # ISIS Parameters when underlay_routing_protocol=ISIS
 underlay_routing_protocol: isis
+underlay_isis_bfd: true
 overlay_routing_protocol: ibgp
 bgp_as: 65000
 isis_area_id: "49.0001"
