--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
@@ -72,9 +72,9 @@ logging:
         global: true
         interval: 10
   level:
-    - facility_name: BGP
+    - facility: BGP
       severity: 0
-    - facility_name: AAA
+    - facility: AAA
       severity: warnings
-    - facility_name: ACL
+    - facility: ACL
       severity: critical
