issue-3811: updated the keys in schema

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1074,11 +1074,11 @@ keys:
                       - str
                     min: 2
                     max: 64
-        layer_2_fec:
+        layer_2_fec_in_place_update:
             type: dict
             description: BGP layer-2 in-place FEC operation.
             keys:
-              without_timeout:
+              enable:
                 type: bool
               timeout:
                 type: int
