Feat(eos_cli_config_gen): Support for configuring logging level facilities (#3944)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/logging.yml
@@ -71,3 +71,10 @@ logging:
       discards:
         global: true
         interval: 10
+  level:
+    - facility: BGP
+      severity: 0
+    - facility: AAA
+      severity: warnings
+    - facility: ACL
+      severity: critical
