--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/logging.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/logging.schema.yml
@@ -149,3 +149,46 @@ keys:
                     min: 10
                     max: 65535
                     description: Logging interval in seconds.
+      level:
+        type: list
+        description: Configure logging severity.
+        primary_key: facility
+        convert_types:
+          - dict
+        items:
+          type: dict
+          keys:
+            facility:
+              type: str
+            severity:
+              type: str
+              convert_types:
+                - int
+              description: |-
+                Severity of facility. Below are the supported severites.
+                emergencies    System is unusable                (severity=0)
+                alerts         Immediate action needed           (severity=1)
+                critical       Critical conditions               (severity=2)
+                errors         Error conditions                  (severity=3)
+                warnings       Warning conditions                (severity=4)
+                notifications  Normal but significant conditions (severity=5)
+                informational  Informational messages            (severity=6)
+                debugging      Debugging messages                (severity=7)
+                <0-7>          Severity level value
+              valid_values:
+                - alerts
+                - critical
+                - debugging
+                - emergencies
+                - errors
+                - informational
+                - notifications
+                - warnings
+                - '0'
+                - '1'
+                - '2'
+                - '3'
+                - '4'
+                - '5'
+                - '6'
+                - '7'
