--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge1.cfg
@@ -17,8 +17,11 @@ service routing protocols model multi-agent
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
 !
-ip nat profile VRF-AWARE-NAT
+ip nat profile PORT-ONLY-VRF-AWARE-NAT
    ip nat source dynamic access-list ALLOW-ALL pool PORT-ONLY-POOL
+!
+ip nat profile VRF-AWARE-NAT
+   ip nat source dynamic access-list ALLOW-ALL overload
 !
 hostname cv-pathfinder-edge1
 !
@@ -333,6 +336,7 @@ interface Ethernet3
    no switchport
    ip address dhcp
    dhcp client accept default-route
+   ip nat service-profile VRF-AWARE-NAT
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-DISABLED-LEAF_Ethernet2
@@ -374,7 +378,7 @@ interface Tunnel100
    description Internet Exit ZSCALER-EXIT-POLICY-1 PRI
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -384,7 +388,7 @@ interface Tunnel101
    description Internet Exit ZSCALER-EXIT-POLICY-1 SEC
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -394,7 +398,7 @@ interface Tunnel102
    description Internet Exit ZSCALER-EXIT-POLICY-1 TER
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
@@ -404,7 +408,7 @@ interface Tunnel110
    description Internet Exit ZSCALER-EXIT-POLICY-2 PRI
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.37.121.1
@@ -414,7 +418,7 @@ interface Tunnel111
    description Internet Exit ZSCALER-EXIT-POLICY-2 SEC
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.39.77.1
@@ -424,7 +428,7 @@ interface Tunnel112
    description Internet Exit ZSCALER-EXIT-POLICY-2 TER
    mtu 1394
    ip address unnumbered Ethernet3
-   ip nat service-profile VRF-AWARE-NAT
+   ip nat service-profile PORT-ONLY-VRF-AWARE-NAT
    tunnel mode ipsec
    tunnel source interface Ethernet3
    tunnel destination 10.50.9.1
