--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -16,6 +16,10 @@ service routing protocols model multi-agent
 !
 ip as-path access-list ASPATH-WAN permit 65000 any
 !
+!
+ip nat profile VRF-AWARE-NAT
+   ip nat source dynamic access-list ALLOW-ALL overload
+!
 hostname cv-pathfinder-transit1A
 !
 router adaptive-virtual-topology
@@ -306,6 +310,7 @@ interface Ethernet2.42
    no shutdown
    encapsulation dot1q vlan 666
    ip address 172.16.6.6/31
+   ip nat service-profile VRF-AWARE-NAT
 !
 interface Ethernet52
    description P2P_LINK_TO_SITE-HA-ENABLED-LEAF1_Ethernet1
@@ -426,6 +431,7 @@ ip prefix-list PL-WAN-HA-PEER-PREFIXES
 !
 ip prefix-list PL-WAN-HA-PREFIXES
    seq 10 permit 172.17.0.0/31
+!
 !
 route-map RM-BGP-UNDERLAY-PEERS-IN permit 10
    description Allow WAN HA peer interface prefixes
