--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/cv-pathfinder-edge1.yml
@@ -229,6 +229,8 @@ ethernet_interfaces:
   type: routed
   description: ATT_404
   dhcp_client_accept_default_route: true
+  ip_nat:
+    service_profile: VRF-AWARE-NAT
 loopback_interfaces:
 - name: Loopback0
   description: Router_ID
@@ -630,12 +632,17 @@ ip_nat:
     - first_port: 1500
       last_port: 65535
   profiles:
-  - name: VRF-AWARE-NAT
+  - name: PORT-ONLY-VRF-AWARE-NAT
     source:
       dynamic:
       - access_list: ALLOW-ALL
         pool_name: PORT-ONLY-POOL
         nat_type: pool
+  - name: VRF-AWARE-NAT
+    source:
+      dynamic:
+      - access_list: ALLOW-ALL
+        nat_type: overload
 router_service_insertion:
   enabled: true
   connections:
@@ -737,7 +744,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.37.121.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
-  nat_profile: VRF-AWARE-NAT
+  nat_profile: PORT-ONLY-VRF-AWARE-NAT
 - name: Tunnel101
   description: Internet Exit ZSCALER-EXIT-POLICY-1 SEC
   mtu: 1394
@@ -746,7 +753,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.39.77.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
-  nat_profile: VRF-AWARE-NAT
+  nat_profile: PORT-ONLY-VRF-AWARE-NAT
 - name: Tunnel102
   description: Internet Exit ZSCALER-EXIT-POLICY-1 TER
   mtu: 1394
@@ -755,7 +762,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.50.9.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-1-PROFILE
-  nat_profile: VRF-AWARE-NAT
+  nat_profile: PORT-ONLY-VRF-AWARE-NAT
 - name: Tunnel110
   description: Internet Exit ZSCALER-EXIT-POLICY-2 PRI
   mtu: 1394
@@ -764,7 +771,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.37.121.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
-  nat_profile: VRF-AWARE-NAT
+  nat_profile: PORT-ONLY-VRF-AWARE-NAT
 - name: Tunnel111
   description: Internet Exit ZSCALER-EXIT-POLICY-2 SEC
   mtu: 1394
@@ -773,7 +780,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.39.77.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
-  nat_profile: VRF-AWARE-NAT
+  nat_profile: PORT-ONLY-VRF-AWARE-NAT
 - name: Tunnel112
   description: Internet Exit ZSCALER-EXIT-POLICY-2 TER
   mtu: 1394
@@ -782,7 +789,7 @@ tunnel_interfaces:
   source_interface: Ethernet3
   destination: 10.50.9.1
   ipsec_profile: IE-ZSCALER-EXIT-POLICY-2-PROFILE
-  nat_profile: VRF-AWARE-NAT
+  nat_profile: PORT-ONLY-VRF-AWARE-NAT
 monitor_connectivity:
   interface_sets:
   - name: SET-Ethernet3
