add access list for direct ie

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-transit1A.cfg
@@ -413,6 +413,9 @@ monitor connectivity
       local-interfaces SET-Ethernet2.42
       ip 123.12.3.4
 !
+ip access-list ALLOW-ALL
+   10 permit ip any any
+!
 ip routing
 ip routing vrf ATTRACTED-VRF-FROM-UPLINK
 ip routing vrf IT
