--- a/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
+++ b/ansible_collections/arista/avd/molecule/eos_cli_config_gen/inventory/host_vars/router-bgp-base.yml
@@ -103,7 +103,9 @@ router_bgp:
         rcf_out: Address_Family_IPV4_Out()
     redistribute_routes:
       - source_protocol: connected
+        include_leaked: true
         rcf: Address_Family_IPV4_Connected()
+      - source_protocol: bgp
       - source_protocol: static
         rcf: Address_Family_IPV4_Static()
       - source_protocol: dynamic
@@ -127,7 +129,7 @@ router_bgp:
     redistribute_routes:
       - source_protocol: static
         route_map: RM-IPV6-STATIC-TO-BGP
-      - source_protocol: ospf
+      - source_protocol: ospfv3
         include_leaked: true
       - source_protocol: bgp
         route_map: RM-REDISTRIBUTE-BGP
