--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/router_bgp.schema.yml
@@ -1244,17 +1244,29 @@ keys:
               keys:
                 source_protocol:
                   type: str
+                  valid_values:
+                    - "attached-host"
+                    - "bgp"
+                    - "connected"
+                    - "dynamic"
+                    - "isis"
+                    - "ospf"
+                    - "ospfv3"
+                    - "rip"
+                    - "static"
+                    - "user"
                 route_map:
                   type: str
                 include_leaked:
                   type: bool
+                  description: Only applicable if `source_protocol` is one of `connected`, `static`, `isis`, `ospf`, `ospfv3`.
                 rcf:
                   type: str
                   description: |-
                     RCF function name with parenthesis.
                     Example: MyFunction(myarg).
                     `route_map` and `rcf` are mutually exclusive. `route_map` takes precedence.
-                    Only used if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
+                    Only applicable if `source_protocol` is one of `connected`, `static`, `isis`, `user`, `dynamic`.
       address_family_ipv4_multicast:
         type: dict
         keys:
@@ -1439,6 +1451,16 @@ keys:
               keys:
                 source_protocol:
                   type: str
+                  valid_values:
+                    - "attached-host"
+                    - "bgp"
+                    - "connected"
+                    - "dhcp"
+                    - "dynamic"
+                    - "isis"
+                    - "ospfv3"
+                    - "static"
+                    - "user"
                 route_map:
                   type: str
                 include_leaked:
