--- a/.github/workflows/pull-request-management.yml
+++ b/.github/workflows/pull-request-management.yml
@@ -210,7 +210,7 @@ jobs:
         include:
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core==2.14.0'
-            pip_requirements: '/tmp/requirements-minimum.txt'
+            pip_requirements: 'tmp-requirements-minimum.txt'
           - avd_scenario: 'eos_designs_unit_tests'
             ansible_version: 'ansible-core>=2.14.0,<2.15.0 --upgrade'
             pip_requirements: 'ansible_collections/arista/avd/requirements.txt'
@@ -228,9 +228,9 @@ jobs:
       - name: Build minimum requirements
         run: |
           pip install uv
-          uv pip compile ansible_collections/arista/avd/requirements.txt --resolution=lowest-direct > /tmp/requirements-minimum.txt
-          cat /tmp/requirements-minimum.txt
-        if: ${{ matrix.pip_requirements }} == '/tmp/requirements-minimum.txt'
+          uv pip compile ansible_collections/arista/avd/requirements.txt --resolution=lowest-direct > ${{ matrix.pip_requirements }}
+          cat ${{ matrix.pip_requirements }}
+        if: matrix.pip_requirements == 'tmp-requirements-minimum.txt'
       - name: Run molecule action
         uses: arista-netdevops-community/action-molecule-avd@v1.7
         with:
